--- a/src/oper.html
+++ b/src/oper.html
@@ -7,11 +7,13 @@
     <link href="/dist/common.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="bg-black">
-    <div class="transition-all delay-75 ease-in duration-300 w-24 hover:w-32 hover:bg-[#3bafe8] inline-block border-2 border-white border-solid">
+<body class="bg-bgcolor">
+    <div class="operators-table flex justify-center flex-wrap my-0">
+        <div class="operators-cell">
+            <img src="image/Potrait_sledge.png" width="100%"/>
+            <span class="cordname scoutcond">Sledge</span>
+        </div>
 
-        <img src="pic/Potrait_sledge.png" width="100%"/>
-    
     </div>
 </body>
 </html>
