新功能：特勤干员首页设计

--- a/src/oper.html
+++ b/src/oper.html
@@ -7,13 +7,31 @@
     <link href="/dist/common.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="bg-bgcolor">
-    <div class="operators-table flex justify-center flex-wrap my-0">
-        <div class="operators-cell">
-            <img src="image/Potrait_sledge.png" width="100%"/>
-            <span class="cordname scoutcond">Sledge</span>
-        </div>
+<body class="bg-[#000000]">
+<div class="operators-table flex justify-center flex-wrap my-0">
+    <div class="operators-cell">
+        <a href="/wiki/Sledge" title="Sledge">
+            <img alt="Potrait sledge.png" src="image/Potrait_sledge.png" width="300" height="500" class="img-fit potrait" data-file-width="300" data-file-height="500">
+        </a>
+        <a href="/wiki/Sledge" title="Sledge">
+            <img alt="Badge sledge.png" src="image/Badge_sledge.png" width="201" height="201" class="img-fit badge" data-file-width="201" data-file-height="201">
+        </a>
 
+        <p>
+            <a href="/wiki/Sledge" title="Sledge">
+                <img alt="Sledge skill icon.png" src="image/Sledge_skill_icon.png" width="48" height="48" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/72px-Sledge_skill_icon.png 1.5x, https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/96px-Sledge_skill_icon.png 2x" data-file-width="100" data-file-height="100">
+            </a>
+            <br/>
+            战术突破锤
+            <br/>
+            <a href="/wiki/Sledge" title="Sledge">
+                <img alt="Attacker icon.png" src="image/Attacker_icon.png" width="16" height="16" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/4/4c/Attacker_icon.png/36px-Attacker_icon.png 1.5x, https://huiji-public.huijistatic.com/r6s/uploads/4/4c/Attacker_icon.png 2x" data-file-width="44" data-file-height="44" class="camp-icon"></a>
+            进攻方
+        </p>
+        <span class="cordname scoutcond">
+            Sledge
+        </span>
     </div>
+</div>
 </body>
 </html>
