--- a/src/oper.html
+++ b/src/oper.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body class="bg-[#000000]">
-<div class="operators-table flex justify-center flex-wrap my-0">
-    <div class="operators-cell">
+<div class="operators-homepage-table flex justify-center flex-wrap my-0">
+    <div class="partition-home-table-cell">
         <a href="/wiki/Sledge" title="Sledge">
             <img alt="Potrait sledge.png" src="image/Potrait_sledge.png" width="300" height="500" class="img-fit potrait" data-file-width="300" data-file-height="500">
         </a>
@@ -28,7 +28,7 @@
                 <img alt="Attacker icon.png" src="image/Attacker_icon.png" width="16" height="16" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/4/4c/Attacker_icon.png/36px-Attacker_icon.png 1.5x, https://huiji-public.huijistatic.com/r6s/uploads/4/4c/Attacker_icon.png 2x" data-file-width="44" data-file-height="44" class="camp-icon"></a>
             进攻方
         </p>
-        <span class="cordname scoutcond">
+        <span class="name scoutcond">
             Sledge
         </span>
     </div>
