更新错误代码

--- a/src/mapmodehomepage.html
+++ b/src/mapmodehomepage.html
@@ -26,5 +26,13 @@
         </span>
     </div>
 </div>
+
+
+<div class="w-5 md:w-1 hover:bg-primary h-1 bg-white"></div>
+
+
+
+
+
 </body>
 </html>
