--- a/src/mapmodehomepage.html
+++ b/src/mapmodehomepage.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body class="bg-[#000000]">
-<div class="mapmode-homepage-table flex justify-center flex-wrap my-0">
+<div class="mapmode-homepage-table flex justify-start flex-wrap my-0">
     <div class="partition-home-table-cell">
         <a href="/wiki/Sledge" title="Sledge">
-            <img alt="Potrait sledge.png" src="image/map-cafe.png" class="object-cover potrait" width="100%" height="200">
+            <img alt="Potrait sledge.png" src="image/map-cafe.png" class="object-fit potrait" width="100%" height="200">
         </a>
         <span class="name">
             杜斯妥也夫斯基咖啡馆
