完成干员首页的功能和移动端适配，完成地图和模式封面展示单元模板。

--- a/src/mapmodehomepage.html
+++ b/src/mapmodehomepage.html
@@ -10,20 +10,26 @@
 <body class="bg-[#000000]">
 <div class="mapmode-homepage-table flex justify-start flex-wrap my-0">
     <div class="partition-home-table-cell">
-        <a href="/wiki/Sledge" title="Sledge">
-            <img alt="Potrait sledge.png" src="image/map-cafe.png" class="object-fit potrait" width="100%" height="200">
-        </a>
-        <span class="name">
-            杜斯妥也夫斯基咖啡馆
-        </span>
-    </div>
-    <div class="partition-home-table-cell">
         <a href="/wiki/Sledge" title="Sledge" >
             <img alt="map-UNIVERSITY.png" src="image/map-UNIVERSITY.png" class="img-fit potrait" width="100%" height="200px">
         </a>
-        <span class="name">
-            杜斯妥也夫斯基咖啡馆
-        </span>
+        <div class="name">
+            <span>
+                杜斯妥也夫斯基咖啡馆
+            </span>
+        </div>
+    </div>
+    <div class="partition-home-table-cell">
+        <div class="map-pic">
+            <a href="/wiki/Sledge" title="Sledge" >
+                <img alt="map-UNIVERSITY.png" src="image/map-UNIVERSITY.png" class="img-fit potrait" width="100%" height="200px">
+            </a>
+        </div>
+            <div class="name">
+            <span>
+                杜斯妥也夫斯基咖啡馆
+            </span>
+        </div>
     </div>
 </div>
 
