--- a/src/oper.html
+++ b/src/oper.html
@@ -8,30 +8,76 @@
     <title>Document</title>
 </head>
 <body class="bg-[#000000]">
-<div class="operators-homepage-table flex justify-center flex-wrap my-0">
-    <div class="partition-home-table-cell">
-        <a href="/wiki/Sledge" title="Sledge">
-            <img alt="Potrait sledge.png" src="image/Potrait_sledge.png" width="300" height="500" class="img-fit potrait" data-file-width="300" data-file-height="500">
-        </a>
-        <a href="/wiki/Sledge" title="Sledge">
-            <img alt="Badge sledge.png" src="image/Badge_sledge.png" width="201" height="201" class="img-fit badge" data-file-width="201" data-file-height="201">
-        </a>
-
-        <p>
+    <div class="operators-homepage-table flex justify-center flex-wrap my-0">
+        <input type ="radio" name="camp-select" id="attacker" class="hidden">
+        <input type="radio" name="camp-select" id="defender" class="hidden">
+        <div class="display-camp-selector flex justify-center h-fit w-full block md:pb-16">
+            <label for="attacker">
+                <div>
+                    <span>
+                        <img src="image/attacker.svg" class="camp-icon-svg" width="10"></span>进攻方
+                    </span>
+                </div>
+            </label>
+            <label for="defender">
+                <div>
+                    <span>    
+                        防守方
+                    </span>
+                </div>
+            </label>
+        </div>
+        <div class="partition-home-table-cell attacker">
             <a href="/wiki/Sledge" title="Sledge">
-                <img alt="Sledge skill icon.png" src="image/Sledge_skill_icon.png" width="48" height="48" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/72px-Sledge_skill_icon.png 1.5x, https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/96px-Sledge_skill_icon.png 2x" data-file-width="100" data-file-height="100">
+                <img alt="Potrait sledge.png" src="image/Potrait_sledge.png" width="300" height="500" class="img-fit potrait" data-file-width="300" data-file-height="500">
             </a>
-            <br/>
-            战术突破锤
-            <br/>
             <a href="/wiki/Sledge" title="Sledge">
-                <img alt="Attacker icon.png" src="image/Attacker_icon.png" width="16" height="16" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/4/4c/Attacker_icon.png/36px-Attacker_icon.png 1.5x, https://huiji-public.huijistatic.com/r6s/uploads/4/4c/Attacker_icon.png 2x" data-file-width="44" data-file-height="44" class="camp-icon"></a>
-            进攻方
-        </p>
-        <span class="name scoutcond">
-            Sledge
-        </span>
-    </div>
+                <img alt="Badge sledge.png" src="image/Badge_sledge.png" width="201" height="201" class="img-fit badge" data-file-width="201" data-file-height="201">
+            </a>
+            
+            <p>
+                <a href="/wiki/Sledge" title="Sledge">
+                    <img alt="Sledge skill icon.png" src="image/Sledge_skill_icon.png" width="48" height="48" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/72px-Sledge_skill_icon.png 1.5x, https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/96px-Sledge_skill_icon.png 2x" data-file-width="100" data-file-height="100">
+                </a>
+                <br/>
+                战术突破锤
+                <br/>
+                <a href="/wiki/Sledge" title="Sledge">
+                    <img alt="Attacker icon.png" src="image/Attacker_icon.png" width="16" height="16" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/4/4c/Attacker_icon.png/36px-Attacker_icon.png 1.5x, https://huiji-public.huijistatic.com/r6s/uploads/4/4c/Attacker_icon.png 2x" data-file-width="44" data-file-height="44" class="camp-icon"></a>
+                    进攻方
+                </p>
+                <div class="name">
+                    <span class="name scoutcond">
+                        Sledge
+                    </span>
+                </div>
+        </div>
+
+        <div class="partition-home-table-cell defender">
+            <a href="/wiki/Sledge" title="Sledge">
+                <img alt="Potrait sledge.png" src="image/Potrait_sledge.png" width="300" height="500" class="img-fit potrait" data-file-width="300" data-file-height="500">
+            </a>
+            <a href="/wiki/Sledge" title="Sledge">
+                <img alt="Badge sledge.png" src="image/Badge_sledge.png" width="201" height="201" class="img-fit badge" data-file-width="201" data-file-height="201">
+            </a>
+
+            <p>
+                <a href="/wiki/Sledge" title="Sledge">
+                    <img alt="Sledge skill icon.png" src="image/Sledge_skill_icon.png" width="48" height="48" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/72px-Sledge_skill_icon.png 1.5x, https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/e/e7/Sledge_skill_icon.png/96px-Sledge_skill_icon.png 2x" data-file-width="100" data-file-height="100">
+                </a>
+                <br/>
+                战术突破锤
+                <br/>
+                <a href="/wiki/Sledge" title="Sledge">
+                    <img alt="Attacker icon.png" src="image/Attacker_icon.png" width="16" height="16" srcset="https://huiji-thumb.huijistatic.com/r6s/uploads/thumb/4/4c/Attacker_icon.png/36px-Attacker_icon.png 1.5x, https://huiji-public.huijistatic.com/r6s/uploads/4/4c/Attacker_icon.png 2x" data-file-width="44" data-file-height="44" class="camp-icon"></a>
+                防守方
+            </p>
+            <div class="name">
+                <span class="scoutcond">
+                    Sledge
+                </span>
+            </div>
+        </div>
 </div>
 </body>
 </html>
