改进干员首页的体验：连续点击筛选按钮不再会导致选择可见元素；重新整理html布局设计文件

--- a/src/干员首页.html
+++ b/src/干员首页.html
@@ -8,20 +8,20 @@
     <title>Document</title>
 </head>
 <body class="bg-[#000000]">
-    <div class="operators-homepage-table flex justify-center flex-wrap my-0">
+    <div class="flex flex-wrap justify-center my-0 operators-homepage-table">
         <input type ="radio" name="camp-select" id="attacker" class="hidden">
         <input type="radio" name="camp-select" id="defender" class="hidden">
-        <div class="display-camp-selector flex justify-center h-fit w-full block md:pb-16">
+        <div class="flex justify-center block w-full display-camp-selector h-fit md:pb-16">
             <label for="attacker">
                 <div>
-                    <span>
+                    <span class="pointer-events-none select-none">
                         <img src="image/attacker.svg" class="camp-icon-svg" width="10"></span>进攻方
                     </span>
                 </div>
             </label>
             <label for="defender">
                 <div>
-                    <span>    
+                    <span class="pointer-events-none select-none">    
                         防守方
                     </span>
                 </div>
