更新忽略同步文件列表

--- a/src/地图首页.html
+++ b/src/地图首页.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="bg-[#000000]">
-<div class="mapmode-homepage-table flex justify-start flex-wrap my-0">
+<div class="flex flex-wrap justify-start my-0 mapmode-homepage-table">
     <div class="partition-home-table-cell">
         <a href="/wiki/Sledge" title="Sledge" >
             <img alt="map-UNIVERSITY.png" src="image/map-UNIVERSITY.png" class="img-fit potrait" width="100%" height="200px">
@@ -34,7 +34,7 @@
 </div>
 
 
-<div class="w-5 md:w-1 hover:bg-primary h-1 bg-white"></div>
+<div class="w-5 h-1 bg-white md:w-1 hover:bg-primary"></div>
 
 
 
